# mcp-gateway-registry

./: .env.example  .gitignore  CLAUDE.md  DEV_INSTRUCTIONS.md  Dockerfile  Makefile  OPENSEARCH_INTEGRATION.md  README.md  build-config.yaml  build_and_run.sh  docker-compose.federation-test.yml  docker-compose.full.yml  docker-compose.podman.yml  docker-compose.prebuilt.yml  docker-compose.yml  pyproject.toml
.claude/skills/macos-setup/: SKILL.md
.github/workflows/: auth-server-test.yml  build-auth-server.yml  build-registry.yml  helm-test.yml  metrics-service-test.yml  registry-test.yml  terraform-test.yml  test.yml
agent_security_scans/2025-12-23/: scan_new-agent_20251223_164655.json
agents/: agent.py  atlassian_streamable_client.py
api/: get-m2m-token.sh  openapi.json  registry_client.py  registry_management.py  test-management-api-e2e.sh
auth_server/: metrics_middleware.py  mongodb_groups_enrichment.py  oauth2_providers.yml  pyproject.toml  scopes.yml  server.py
auth_server/providers/: entra.py  keycloak.py  okta.py
charts/: README.md
charts/auth-server/: values.yaml
charts/auth-server/templates/: deployment.yaml  ingress.yaml  secret.yaml
charts/keycloak-configure/templates/: secret.yaml
charts/mcp-gateway-registry-stack/: README.md  values.yaml
charts/mcp-gateway-registry-stack/charts/: auth-server-0.1.0.tgz  keycloak-configure-0.1.0.tgz  registry-0.1.0.tgz
charts/mcp-gateway-registry-stack/templates/: keycloak-ingress-patch.yaml
charts/mongodb-configure/templates/: configmap.yaml  job.yaml
charts/registry/: values.yaml
charts/registry/templates/: deployment.yaml  ingress.yaml  secret.yaml
cli/: sync_okta_m2m.py
cli/examples/: currenttime-users.json  currenttime.json
cli/src/agent/: tools.ts
config/grafana/dashboards/: mcp-analytics-comprehensive.json  mcp-metrics.json
credentials-provider/: generate_creds.sh
credentials-provider/agentcore-auth/: README.md
credentials-provider/okta/: __init__.py  get_m2m_token.py
docker/: Dockerfile.auth  Dockerfile.mcp-server  Dockerfile.registry  nginx_rev_proxy.conf  nginx_rev_proxy_http_and_https.conf  nginx_rev_proxy_http_only.conf  registry-entrypoint.sh
docker/lua/: virtual_router.lua
docs/: FEATURES.md  agent-skills-operational-guide.md  audit-logging.md  complete-setup-guide.md  configuration.md  database-design.md  docker-build-variants.md  eks-deployment-guide.md  entra-id-setup.md  federation-operational-guide.md  federation.md  keycloak-integration.md  macos-setup-guide.md  okta-setup.md  prebuilt-images.md
docs/design/: database-abstraction-layer.md  hybrid-search-architecture.md  storage-architecture-mongodb-documentdb.md  virtual-mcp-server.md
examples/: federation-config-anthropic-only.json  federation-config-example.json  federation-config-import-all.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AgentCard.tsx  AuditEventDetail.tsx  AuditLogTable.tsx  GitHubConnect.tsx  IAMM2M.tsx  Layout.tsx  SemanticSearchResults.tsx  ServerCard.tsx  ServerConfigModal.tsx  Sidebar.tsx  (+2 more)
metrics-service/: Dockerfile  pyproject.toml  pytest.ini
metrics-service/app/: config.py  main.py
metrics-service/docs/: README.md  api-reference.md
registry/: __init__.py  constants.py  main.py  version.py
registry/api/: agent_routes.py  config_routes.py  federation_export_routes.py  federation_routes.py  management_routes.py  okta_m2m_routes.py  peer_management_routes.py  registry_routes.py  search_routes.py  server_routes.py  skill_routes.py  virtual_server_routes.py  wellknown_routes.py
registry/audit/: __init__.py  middleware.py  models.py  routes.py  service.py
registry/auth/: dependencies.py  github_oauth.py  routes.py
registry/common/: scopes_loader.py
registry/core/: config.py  endpoint_utils.py  mcp_client.py  nginx_service.py  schemas.py
registry/embeddings/: client.py
registry/health/: routes.py  service.py
registry/metrics/: __init__.py  client.py  middleware.py  utils.py
registry/models/: idp_m2m_client.py
registry/repositories/: factory.py  interfaces.py
registry/schemas/: agent_models.py  agent_security.py  anthropic_schema.py  federation_schema.py  federation_topology_schema.py  management.py  peer_federation_schema.py  security.py  skill_models.py  virtual_server_models.py
registry/search/: service.py
registry/services/: agent_scanner.py  agent_service.py  agent_transform_service.py  federation_service.py  okta_m2m_sync.py  peer_federation_service.py  peer_sync_scheduler.py  rating_service.py  scope_service.py  security_scanner.py  server_service.py  skill_service.py  tool_validation_service.py  transform_service.py  virtual_server_service.py
registry/templates/: index.html
registry/utils/: agent_validator.py  github_client.py  keycloak_manager.py  okta_manager.py  scopes_manager.py
release-notes/: v1.0.17.md  v1.0.9.md
scripts/: README-OPENSEARCH-IMPORT.md  delete-aoss-index.py  fix-aoss-compatibility.py  import-scopes-to-opensearch-aws.py  import-scopes-to-opensearch.py  import-security-scans-to-opensearch.py  init-mongodb-ce.py  init-opensearch-aws.py  init-opensearch.py  list-opensearch-indices.py  manage-aoss-indexes.py  reindex-servers-with-tags.py  repopulate-servers-and-agents.sh  repopulate-servers.sh  test-opensearch-phase2.sh  test-peer-federation-docker.sh  test-peer-federation.sh  test.py  update-server-tags.py
servers/mcpgw/: pyproject.toml  server.py
terraform/aws-ecs/: .gitignore  README.md  documentdb.tf  keycloak-alb.tf  keycloak-database.tf  keycloak-security-groups.tf  main.tf  opensearch-cli-task.tf  opensearch-serverless.tf  opensearch.tf  outputs.tf  push-opensearch-to-ecr.sh  terraform.tfvars.example  variables.tf
tests/: conftest.py  e2e_agent_skills_test.py
tests/auth_server/: conftest.py
tests/e2e/: test_virtual_mcp_protocol.py
tests/integration/: conftest.py  test_search_integration.py  test_search_routes.py  test_server_lifecycle.py  test_virtual_server_api.py
tests/unit/: test_main.py  test_version.py  test_virtual_server_service.py
(+132 files in other folders)
