[project]
name = "mcp-registry"
version = "0.1.0"
description = "A registry for MCP servers"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core web framework
    "fastapi>=0.115.12",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "mcp>=1.9.3",
    "pydantic>=2.11.3,<2.12.0",  # Pin <2.12 due to fastmcp incompatibility
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.32.0",  # 0.32+ has better websockets 14/15 support
    "websockets>=13.0,<14.0",  # Pin to 13.x to avoid deprecation warnings (uvicorn uses legacy API)
    # API embeddings (lightweight - works without local ML)
    "litellm>=1.50.0",
    "opensearch-py>=2.4.0",
    # AWS integration
    "awscli>=1.36.0",
    "boto3>=1.35.0",
    # Agent frameworks
    "langchain-core>=1.2.5",  # CVE-2025-68664 fix
    "langchain-mcp-adapters>=0.0.11",
    "langgraph>=0.4.3",
    "langchain-aws>=0.2.23",
    "langchain-anthropic>=0.3.17",
    "strands-agents>=0.1.6",
    "strands-agents-tools>=0.1.4",
    # Security and utilities
    "bandit>=1.8.3",
    "pyjwt>=2.10.1",
    "typing-extensions>=4.8.0",
    "httpcore[asyncio]>=1.0.9",
    "pyyaml>=6.0.0",
    "pytz>=2025.2",
    "matplotlib>=3.10.5",
    "psutil>=6.1.0",
    "email-validator>=2.2.0",
    "aiohttp>=3.8.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "cisco-ai-a2a-scanner @ git+https://github.com/cisco-ai-defense/a2a-scanner.git@main",
    # NOTE: ML dependencies (torch, faiss-cpu, sentence-transformers) are in [ml] optional group
    # Install with: uv sync --extra ml  OR  pip install mcp-registry[ml]
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "coverage[toml]>=7.4.0",
    "httpx>=0.27.0",  # For testing HTTP clients
    "pytest-html>=4.1.1",
    "pytest-json-report>=1.5.0",
    "factory-boy>=3.3.0",
    "faker>=24.0.0",
    "freezegun>=1.4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.7.0",
    "pymdown-extensions>=10.0.0",
]
# Local ML backends (heavy dependencies ~500MB+)
# Required for: EMBEDDINGS_PROVIDER=sentence-transformers or STORAGE_BACKEND=file (FAISS)
# Not needed when using: EMBEDDINGS_PROVIDER=litellm with STORAGE_BACKEND=opensearch
ml = [
    # NOTE: torch is configured to use CPU-only wheels via [tool.uv] extra-index-url
    # For pip users: pip install --extra-index-url https://download.pytorch.org/whl/cpu torch
    "torch>=2.0.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.3.0",
    "huggingface-hub>=0.31.1",
]

[tool.setuptools]
packages = ["registry"]

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=registry",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
    "--html=tests/reports/report.html",
    "--self-contained-html",
    "--json-report",
    "--json-report-file=tests/reports/report.json",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "auth: Authentication tests",
    "servers: Server management tests", 
    "search: Search and AI tests",
    "health: Health monitoring tests",
    "core: Core infrastructure tests",
    "slow: Slow running tests",
]

# Coverage Configuration
[tool.coverage.run]
source = ["registry"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
    "registry/main_old.py",
]

[tool.coverage.paths]
source = [
    "registry/",
    "*/site-packages/registry/",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
skip_empty = true
sort = "cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
title = "MCP Registry Coverage Report"

[tool.uv]
# Local-only project - never resolve from PyPI
package = false

# Use PyTorch CPU-only index to avoid pulling ~2GB of CUDA libraries
# This applies when using: uv pip install, uv sync, etc.
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
