[project]
name = "mcpgw-mcp-server"
version = "0.1.0"
description = "MCP server to interact with the MCP Gateway Registry API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core dependencies (always needed)
    "fastmcp>=2.0.0",
    # Pin pydantic <2.12 due to fastmcp incompatibility with default+default_factory
    "pydantic>=2.11.3,<2.12.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "websockets>=13.0,<14.0",  # Pin to 13.x to avoid deprecation warnings
    # NOTE: ML dependencies (faiss-cpu, sentence-transformers, scikit-learn) are in [ml] optional group
    # Install with: uv sync --extra ml  OR  pip install mcpgw-mcp-server[ml]
]

[project.optional-dependencies]
# Local ML for semantic search (heavy dependencies ~500MB+)
# Required for local FAISS-based search
# Not needed if using registry API for search
ml = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.3.0",
]

[tool.uv]
# Local-only project - never resolve from PyPI
package = false

# Use PyTorch CPU-only index to avoid ~2GB of CUDA libraries
extra-index-url = ["https://download.pytorch.org/whl/cpu"]

